added testing validation encryption exception